--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,10 +5,8 @@
               <br/><br/>
               <h2>About Joshua Staley</h2>
               <br/>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>I am a Systems Engineer specializing in automating the virtual infrastructure. Experienced in both public and private cloud engineering with a strong desire to unite the operations and development teams with unified tools.</p>
+              
                 <br/>
               </div>
         </div>
