--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="#experience">Experience</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
